<resources>

    <string name="app_name">eat choice</string>

    <!--汎用-->
    <string name="year_title">年</string>
    <string name="month_title">月</string>
    <string name="date_title">日</string>
    <string name="hour_title">時</string>
    <string name="minute_title">分</string>
    <string name="money_title">円</string>
    <string name="honor_title">様</string>
    <string name="about_title">約</string>

    <!-- 左のメニュー用 -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- マイページ項目用 -->
    <string name="my_page_name">氏名</string>
    <string name="my_page_birthday">生年月日</string>
    <string name="my_page_password">パスワード</string>
    <string name="my_page_address">住所</string>
    <string name="my_page_mail">メールアドレス</string>
    <string name="my_page_credit_card_number">カード番号</string>
    <string name="my_page_credit_card_expiration_date">カード有効期限</string>
    <string name="my_page_credit_card_security_code">セキュリティコード</string>
    <string name="my_page_credit_card_holder">カード名義人</string>
    <string name="my_page_height">身長</string>
    <string name="my_page_weight">体重</string>
    <string name="my_page_profession">職業</string>

    <!-- 画面01 【妻&夫】ログイン画面 -->
    <string name="tv_login_title">ログイン</string>
    <string name="tv_login_id">MailAddress</string>
    <string name="tv_login_pass">Password</string>
    <string name="tv_login_new_account"><u>アカウントを作成</u></string>

    <!-- 画面02 【妻】新規会員登録-妻情報入力画面 -->
    <string name="female_new_member">あなたの情報を入力してください</string>
    <string name="female_new_name">名前</string>
    <string name="female_new_birthday">生年月日</string>
    <string name="female_new_password">パスワード</string>
    <string name="female_new_mail">メールアドレス</string>
    <string name="female_new_icon">アイコン画像</string>
    <string name="creditCardInformationRegistration">次へ</string>

    <!-- 画面 【妻】新規会員登録-カード情報入力 -->
    <string name="female_new_credit_card_title">クレジットカードの情報を入力してください</string>
    <string name="female_new_credit_card_number">クレジットカード番号</string>
    <string name="female_new_card_expiration_date">カードの有効期限</string>
    <string-array name="sp_month_list">
        <item>月</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string name="tv_credit_card_slash">/</string>
    <string name="female_new_card_security_code">セキュリティコード</string>
    <string name="female_new_card_card_holder">カード名義人</string>
    <string name="female_new_registration">次へ</string>

    <!-- 画面03 【妻】新規会員登録-夫情報入力画面 -->
    <string name="male_new_member">旦那様の情報を入力してください</string>
    <string name="male_birthday">生年月日</string>
    <string name="male_mail">メールアドレス</string>
    <string name="male_height">身長（任意）</string>
    <string name="tv_male_height_unit">cm</string>
    <string name="male_weight">体重（任意）</string>
    <string name="tv_male_weight_unit">kg</string>
    <string-array name="sp_male_profession">
        <item>職業</item>
        <item>公務員</item>
        <item>経営者・役員</item>
        <item>会社員</item>
        <item>自営業</item>
        <item>自由業</item>
        <item>専業主夫</item>
        <item>パート・アルバイト</item>
        <item>学生</item>
        <item>その他</item>
    </string-array>
    <string name="female_new_place">旦那様のお勤め先住所</string>
    <string name="bt_female_check">登録確認へ</string>

    <!-- 画面04 【妻】新規会員登録確認画面-妻・夫情報 -->
    <string name="registration">登録</string>
    <string name="male_registration_confirmation">旦那様の情報</string>
    <string name="female_registration_confirmation">奥様の情報</string>

    <!-- 画面06【妻】店の一覧表示-Map画面 -->
    <string name="bt_surrounding_store">この周辺の店舗を表示</string>
    <string name="row_bt_store_detail">詳細</string>
    <string name="row_bt_store_reservation">予約</string>

    <!-- 画面07【妻】店の詳細画面 -->
    <string name="bt_next_reservation_page">予約へ</string>
    <string name="tab_title_detail">詳細</string>
    <string name="tab_title_map">マップ</string>
    <string name="tv_store_detail_tel">【電話番号】</string>
    <string name="tv_store_detail_address">【住所】</string>
    <string name="tv_store_detail_opentime">【営業時間】</string>
    <string name="tv_store_detail_budget">【平均予算】</string>
    <string name="tv_store_detail_pr">【PR】</string>

    <!-- 画面08【妻】予約内容を入力する画面 -->
    <string name="tv_reservation_store_name">店名:</string>
    <string name="tv_reservation_store_menu">メニュー:</string>
    <string-array name="sp_reservation_store_menu_list">
        <item>メニューを選択</item>
        <item>メニューA(500円)</item>
        <item>メニューB(800円)</item>
        <item>メニューC(1000円)</item>
    </string-array>
    <string-array name="sp_reservation_store_menu_price_list">
        <item>500円</item>
        <item>800円</item>
        <item>1000円</item>
    </string-array>
    <string name="tv_reservation_datetime">予約時間</string>
    <string name="bt_reservation_date">日付:</string>
    <string name="bt_reservation_time">時間:</string>
    <string name="bt_reservation_message">メッセージ</string>
    <string name="bt_reservation_confirmation">次へ</string>


    <!-- 画面09 【妻】予約の確認と決済画面 -->
    <string name="tv_reservation_check_store_name">店舗名:</string>
    <string name="tv_reservation_check_store_menu">メニュー:</string>
    <string name="tv_reservation_check_datetime">予約時間</string>
    <string name="tv_reservation_check_date">日付:</string>
    <string name="tv_reservation_check_time">時間:</string>
    <string name="tv_reservation_check_price_title">決済金額</string>
    <string name="tv_reservation_check_price_subtotal">小計:</string>
    <string name="tv_reservation_check_price_total">合計:</string>
    <string name="tv_reservation_check_price_circle">円</string>
    <string name="tv_reservation_check_card_title">クレジットカード決済</string>
    <string name="tv_reservation_check_card_no">カード番号:</string>
    <string name="tv_reservation_check_card_name">名義名:</string>
    <string name="tv_reservation_check_card_date">有効期限:</string>
    <string name="tv_reservation_check_card_count01">支払い回数:</string>
    <string name="tv_reservation_check_card_count02">一括払い</string>
    <string name="tv_reservation_check_message">メッセージ無し</string>
    <string name="bt_reservation_check_finish">予約確定</string>

    <!-- 画面13【夫】夫側のパスワード設定-->
    <string name="PasswordInputDescription">パスワード</string>
    <string name="RePasswordInputDescription">パスワード再入力</string>
    <string name="title_activity_maps">Map</string>

    <!-- ロード画面 -->
    <string name="progress_message">ロード中...</string>

    <!--FemaleCardRegistrationActivity-->
    <string name="female_card_registration_title">カード情報入力画面</string>
    <string name="female_card_registration_input_card_complete_2">入力チェック2完了</string>

    <!--FemaleChangeReservationActivity-->
    <string name="female_change_reservation_title">予約内容変更</string>
    <string name="female_change_reservation_input_check_complete">入力チェック完了</string>
    <string name="female_change_reservation_can_not_change_warning_before_3_days">予約日から3日以内のため変更はできません</string>
    <string name="female_change_reservation_can_not_change_warning_for_past_rsv">過去の予約は変更できません</string>
    <string name="female_change_reservation_changed_message">変更完了</string>
    <string name="female_change_reservation_did_not_change_message">変更されませんでした。</string>

    <!--FemaleHistoryListActivity-->
    <string name="female_history_list_title">履歴一覧</string>
    <string name="female_history_list_user_name_title">ユーザー名</string>

    <!--FemaleMaleInformationRegistrationActivity-->
    <string name="female_male_information_registration_title">夫情報入力画面</string>
    <string name="female_male_information_registration_input_check_complete_3">入力チェック3完了</string>

    <!--FemaleMyPageActivity-->
    <string name="female_my_page_title">MyPage</string>
    <string name="female_my_page_title_user_name">ユーザー名</string>

    <!--FemaleNewMemberRegistrationActivity-->
    <string name="female_new_member_registration_title">妻情報入力画面</string>
    <string name="female_new_member_registration_input_check_complete">入力チェック完了</string>

    <!--FemaleNewMemberRegistrationConfirmationScreenActivity-->
    <string name="female_new_member_registration_confirmation_screen_title">カード情報入力画面</string>
    <string name="female_new_member_registration_confirmation_screen_registered_message">登録されました。</string>
    <string name="female_new_member_registration_confirmation_screen_did_not_register_warning">登録が失敗しました。もう一度お願いいたします。</string>

    <!--FemaleNewReservationActivity-->
    <string name="female_new_reservation_title">予約内容入力</string>
    <string name="female_new_reservation_complete_without_message_warning">メッセージ以外は、入力してください。</string>

    <!--FemaleQrCodeActivity-->
    <string name="female_qr_code_title">夫情報読み取り</string>

    <!--FemaleReservationListActivity-->
    <string name="female_reservation_list_title">予約一覧</string>
    <string name="female_reservation_list_user_name">ユーザー名</string>
    <string name="female_reservation_list_today">今日</string>

    <!--FemaleStoreDetailsActivity-->
    <string name="female_store_detail_title">店舗詳細</string>

    <!--FemaleStoreMapListActivity-->
    <string name="female_store_map_list_title">店一覧</string>
    <string name="female_store_map_list_user_name">ユーザー名</string>

    <!--MainActivity-->
    <string name="main_input_message">登録された、メールアドレスとパスワードを入力してください。</string>
    <string name="main_invalid_warning">メールアドレスか、パスワードを間違えています。</string>

    <!--MaleAdditionalInformationEntryActivity-->
    <string name="male_additional_information_entry_title">追加情報</string>
    <string name="male_additional_information_entry_empty_password_warning">どちらもパスワードを入力してください。</string>
    <string name="male_additional_information_entry_incorrect_password_warning">どちらも同じパスワードを入力してください。</string>
    <string name="male_additional_information_entry_registered_message">登録されました。</string>
    <string name="male_additional_information_entry_did_not_register_warning">登録されませんでした。</string>

    <!--MaleEnterShopActivity-->
    <string name="male_enter_shop_title">QRコード表示</string>

    <!--MaleHistoryEditActivity-->
    <string name="male_history_edit_title">店舗詳細</string>

    <!--MaleHistoryListActivity-->
    <string name="male_history_list_title">履歴一覧</string>
    <string name="male_history_list_user_name">ユーザー名</string>

    <!--MaleReservationListActivity-->
    <string name="male_reservation_list_title">予約一覧</string>
    <string name="male_reservation_list_user_name">ユーザー名</string>

    <!--FullDialogFragment-->
    <string name="dialog_title">新規登録</string>
    <string name="dialog_message">貴方は奥様ですか？旦那様ですか?</string>
    <string name="dialog_female">奥様</string>
    <string name="dialog_male">旦那様</string>
    <string name="dialog_cancel">キャンセル</string>
</resources>
