<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCardTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/female_new_credit_card_title"/>

        <EditText
            android:id="@+id/etInputCreditCardNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/female_new_credit_card_number"
            android:inputType="number"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="65dp"
                android:layout_height="wrap_content"
                android:hint="@string/female_new_card_expiration_date"/>

            <Spinner
                android:id="@+id/etInputCardExpirationDate"
                android:layout_width="100dp"
                android:layout_height="match_parent"></Spinner>

            <Spinner
                android:id="@+id/etInputCardExpirationYear"
                android:layout_width="100dp"
                android:layout_height="match_parent"></Spinner>

        </LinearLayout>

        <EditText
            android:id="@+id/etInputCardCardHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/female_new_card_card_holder"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/etInputCardSecurityCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/female_new_card_security_code"
            android:inputType="date"/>

        <Button
            android:onClick="onMaleInformationClick"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/female_new_registration"/>

    </LinearLayout>

</ScrollView>