<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/tv_reservation_check_store_name"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/tv_reservation_check_store_menu"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.3"
                android:gravity="center_vertical"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="0.7"
                android:gravity="center_vertical"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/tv_reservation_check_price_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_price_subtotal"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:text="@string/tv_reservation_check_price_circle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_price_total"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.6"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:text="@string/tv_reservation_check_price_circle"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="0.2"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/tv_reservation_check_card_title"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center_vertical|center_horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_card_no"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_card_name"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_card_date"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp">

                <TextView
                    android:text="@string/tv_reservation_check_card_count01"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.3"
                    android:gravity="center_vertical|center_horizontal"/>

                <TextView
                    android:text="@string/tv_reservation_check_card_count02"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.7"
                    android:gravity="center_vertical|center_horizontal"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    
    <Button
        android:text="@string/bt_reservation_check_finish"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"/>

</LinearLayout>