<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <TextView
                android:text="@string/tv_reservation_store_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"
                android:gravity="center_vertical"/>

            <TextView
                android:id="@+id/tvStoreName"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8" />

        </LinearLayout>

        <TextView
            android:text="@string/tv_reservation_store_menu"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="30dp"/>

        <Spinner
            android:id="@+id/spMenu"
            android:layout_width="match_parent"
            android:layout_height="50dp"></Spinner>

        <TextView
            android:text="@string/tv_reservation_datetime"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/bt_reservation_date"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"/>

            <EditText
                android:id="@+id/etDate"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <TextView
                android:text="@string/bt_reservation_time"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.2"/>

            <EditText
                android:id="@+id/etTime"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="0.8"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:orientation="vertical" >

            <Button
                android:onClick="onFinishReservationClick"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/bt_reservation_confirmation"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
