<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StoreDetailsTab1Fragment">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_store_detail_tel" />

                                <TextView
                                    android:id="@+id/tvStoreDetailTel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_store_detail_address" />

                        <TextView
                            android:id="@+id/tvStoreDetailAddress"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_store_detail_opentime" />

                        <TextView
                            android:id="@+id/tvStoreDetailOpentime"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/tv_store_detail_budget" />

                                <TextView
                                    android:id="@+id/tvStoreDetailBudget"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tv_store_detail_pr" />

                        <TextView
                            android:id="@+id/tvStoreDetailPr"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/ivStoreImage"
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:layout_marginTop="10dp"
                            android:scaleType="fitCenter" />
                </LinearLayout>
        </ScrollView>
</FrameLayout>